--- a/utils.css
+++ b/utils.css
@@ -34,6 +34,7 @@
   
   position: relative;
   margin: auto;
+  padding: 10px;
 }
 
 /* Hide the images by default */
@@ -73,7 +74,6 @@
   color: #f2f2f2;
   font-size: 15px;
   padding: 8px 12px;
-  position: absolute;
   bottom: 8px;
   width: 100%;
   text-align: center;
@@ -105,6 +105,6 @@
 }
 
 @keyframes fade {
-  from {opacity: .4}
+  from {opacity: .5}
   to {opacity: 1}
 }
